project/stage/tests/accept/statements.ul
int main(){
  int thing;
  thing = "thing";
  thing[thing] = thing;
  return thing;
}