project/stage/tests/reject/bad_type_2.ul
void main(){
  int['c'] blah;
}